--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "npm": "^6.14.11",
         "papaparse": "^5.3.0",
         "request": "^2.88.2",
-        "satellite.js": "^4.1.3"
+        "satellite.js": "^4.1.3",
+        "three": "^0.125.2"
     }
 }
