--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/webpack-dev-server": "^3.11.1",
         "@typescript-eslint/eslint-plugin": "^4.14.1",
         "@typescript-eslint/parser": "^4.14.1",
+        "@wasm-tool/wasm-pack-plugin": "^1.3.3",
         "cross-env": "^7.0.3",
         "eslint": "^7.18.0",
         "eslint-config-prettier": "^7.2.0",
