--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "extends": "@tsconfig/recommended/tsconfig.json",
     "compilerOptions": {
+        "module": "esnext",
+        "moduleResolution": "node",
         "noImplicitAny": true,
         "esModuleInterop": true,
         "resolveJsonModule": true
