--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "copy-public-to-dist": "cp -r public dist",
         "develop": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve --config webpack.dev.config.ts",
         "lint": "eslint 'src/**/*.ts'",
-        "release": "npm run lint && npm run build && npm run copy-public-to-dist"
+        "release": "yarn lint && yarn build && yarn copy-public-to-dist"
     },
     "repository": {
         "type": "git",
@@ -23,33 +23,38 @@
     "homepage": "https://github.com/MixMasterMitch/space-junk#readme",
     "devDependencies": {
         "@tsconfig/recommended": "^1.0.1",
+        "@types/dat.gui": "^0.7.7",
+        "@types/node": "14",
         "@types/papaparse": "^5.2.5",
         "@types/request": "^2.48.5",
-        "@types/webpack-dev-server": "^3.11.1",
+        "@types/three": "^0.131.0",
+        "@types/webpack-dev-server": "^4.0.3",
         "@typescript-eslint/eslint-plugin": "^4.14.1",
         "@typescript-eslint/parser": "^4.14.1",
         "@wasm-tool/wasm-pack-plugin": "^1.3.3",
         "cross-env": "^7.0.3",
+        "esbuild-loader": "^2.15.1",
         "eslint": "^7.18.0",
-        "eslint-config-prettier": "^7.2.0",
+        "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.3.1",
         "fork-ts-checker-webpack-plugin": "^6.1.0",
         "prettier": "^2.2.1",
-        "ts-loader": "^8.0.14",
-        "ts-node": "^9.1.1",
+        "ts-loader": "^9.2.5",
+        "ts-node": "^10.2.1",
         "typescript": "^4.1.3",
         "webpack": "^5.19.0",
         "webpack-cli": "^4.4.0",
-        "webpack-dev-server": "^3.11.2",
+        "webpack-dev-server": "^4.0.0",
         "webpack-merge": "^5.7.3"
     },
     "dependencies": {
         "csv-parse": "^4.15.0",
+        "dat.gui": "^0.7.7",
         "install": "^0.13.0",
-        "npm": "^6.14.11",
+        "npm": "^7.21.1",
         "papaparse": "^5.3.0",
         "request": "^2.88.2",
         "satellite.js": "^4.1.3",
-        "three": "^0.125.2"
+        "three": "^0.132.2"
     }
 }
