--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/node": "14",
         "@types/papaparse": "^5.2.5",
         "@types/request": "^2.48.5",
+        "@types/stats.js": "^0.17.0",
         "@types/three": "^0.131.0",
         "@types/webpack-dev-server": "^4.0.3",
         "@typescript-eslint/eslint-plugin": "^4.14.1",
@@ -55,6 +56,7 @@
         "papaparse": "^5.3.0",
         "request": "^2.88.2",
         "satellite.js": "^4.1.3",
+        "stats.js": "^0.17.0",
         "three": "^0.132.2"
     }
 }
