--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "devDependencies": {
         "@tsconfig/recommended": "^1.0.1",
         "@types/dat.gui": "^0.7.7",
+        "@types/event-stream": "^3.3.34",
         "@types/node": "14",
         "@types/papaparse": "^5.2.5",
         "@types/request": "^2.48.5",
@@ -39,6 +40,7 @@
         "eslint": "^7.18.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.3.1",
+        "event-stream": "^4.0.1",
         "fork-ts-checker-webpack-plugin": "^6.1.0",
         "prettier": "^2.2.1",
         "ts-loader": "^9.2.5",
