--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "@types/event-stream": "^3.3.34",
         "@types/node": "14",
         "@types/papaparse": "^5.2.5",
+        "@types/react": "^17.0.30",
+        "@types/react-dom": "^17.0.9",
         "@types/request": "^2.48.5",
         "@types/stats.js": "^0.17.0",
         "@types/three": "^0.131.0",
@@ -44,6 +46,7 @@
         "prettier": "^2.2.1",
         "ts-loader": "^9.2.5",
         "ts-node": "^10.2.1",
+        "tsee": "^1.3.2",
         "typescript": "^4.1.3",
         "webpack": "^5.19.0",
         "webpack-cli": "^4.4.0",
@@ -56,6 +59,8 @@
         "install": "^0.13.0",
         "npm": "^7.21.1",
         "papaparse": "^5.3.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "request": "^2.88.2",
         "satellite.js": "^4.1.3",
         "stats.js": "^0.17.0",
