--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@tsconfig/recommended": "^1.0.1",
         "@types/dat.gui": "^0.7.7",
         "@types/event-stream": "^3.3.34",
+        "@types/luxon": "^2.0.5",
         "@types/node": "14",
         "@types/papaparse": "^5.2.5",
         "@types/react": "^17.0.30",
@@ -57,6 +58,7 @@
         "csv-parse": "^4.15.0",
         "dat.gui": "^0.7.7",
         "install": "^0.13.0",
+        "luxon": "^2.0.2",
         "npm": "^7.21.1",
         "papaparse": "^5.3.0",
         "react": "^17.0.2",
